package mx;

public enum EstadoJuego {
    JUGANDO,
    PAUSADO,
    COMPLETADO,
    PERDIO
}
