@startuml

title __CORE's Class Diagram__\n

  package mx.itesm.revisionistic {
    class Enemigo {
    }
  }
  

  package mx.itesm.revisionistic {
    enum EstadoJuego {
    }
  }
  

  package mx.itesm.revisionistic {
    class Objeto {
    }
  }
  

  package mx.itesm.revisionistic {
    abstract class Pantalla {
    }
  }
  

  package mx.itesm.revisionistic {
    class PantallaCreditos {
    }
  }
  

  package mx.itesm.revisionistic {
    class PantallaExtras {
    }
  }
  

  package mx.itesm.revisionistic {
    class PantallaGameOver {
    }
  }
  

  package mx.itesm.revisionistic {
    class PantallaInicio {
    }
  }
  

  package mx.itesm.revisionistic {
    class PantallaJuego {
    }
  }
  

  package mx.itesm.revisionistic {
    class PantallaMapa {
    }
  }
  

  package mx.itesm.revisionistic {
    class PantallaMenu {
    }
  }
  

  package mx.itesm.revisionistic {
    class PantallaNivel {
    }
  }
  

  package mx.itesm.revisionistic {
    class PantallaOpciones {
    }
  }
  

  package mx.itesm.revisionistic {
    class Personaje {
    }
  }
  

  Enemigo -up-|> Objeto
  Pantalla -up-|> Screen
  PantallaCreditos -up-|> Pantalla
  PantallaCreditos o-- PantallaInicio : pantallaInicio
  PantallaExtras -up-|> Pantalla
  PantallaExtras o-- PantallaInicio : pantallaInicio
  PantallaGameOver -up-|> Pantalla
  PantallaGameOver o-- PantallaInicio : pantallaInicio
  PantallaInicio -up-|> Game
  PantallaJuego -up-|> Pantalla
  PantallaJuego o-- PantallaInicio : pantallaInicio
  PantallaMapa -up-|> Pantalla
  PantallaMapa o-- PantallaInicio : pantallaInicio
  PantallaMapa o-- EstadoJuego : estado
  PantallaMapa o-- EscenaPausa : escenaPausa
  PantallaMapa o-- Personaje : ivan
  PantallaMenu -up-|> Pantalla
  PantallaMenu o-- PantallaInicio : pantallaInicio
  PantallaNivel -up-|> Pantalla
  PantallaOpciones -up-|> Pantalla
  PantallaOpciones o-- PantallaInicio : pantallaInicio
  Personaje -up-|> Objeto
  Personaje o-- EstadoMovimento : estadoMover


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
